@@ -18,9 +18,9 @@
 
     <testng.version>6.14.3</testng.version>
     <log4j.version>2.11.1</log4j.version>
-    <java.version>11</java.version>
-    <jaxb.version>2.4.0-b180830.0359</jaxb.version>
-    <spring.version>5.1.9.RELEASE</spring.version>
+    <java.version>14</java.version>
+    <jaxb.version>2.3.1</jaxb.version>
+    <spring.version>5.2.7.RELEASE</spring.version>
 
   </properties>
 
@@ -73,6 +73,7 @@
           <release>${java.version}</release>
           <source>${java.version}</source>
           <target>${java.version}</target>
+          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
       <plugin>
